--- a/calculator.html
+++ b/calculator.html
@@ -8,7 +8,7 @@
 <body>
    
     <div id="border">
-    <h1>Calculator</h1>
+    <h1> My Calculator</h1>
     <input type="text" id="screen" placeholder="Enter">
     
     <div id="cal">
